Fixes search box issue with dark mode.

--- a/Resources/Styles/search.scss
+++ b/Resources/Styles/search.scss
@@ -37,6 +37,7 @@ section.search {
       background-color: var(--input-background);
       border: none;
       width: 100%;
+      -webkit-appearance: none;
 
       &:focus {
         outline: none;
